successful grey generation